--- a/index.css
+++ b/index.css
@@ -51,6 +51,23 @@
     gap: 2rem;
 }
 
+.bottom-gap {
+    margin-bottom: 1rem;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+
+/* Text */
+
+div.strong {
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
 
 /* Buttons */
 
@@ -79,4 +96,9 @@ button.info {
 button.info:hover {
     background-color: var(--accent-info-light);
     border-color: var(--accent-info-border);
+}
+
+/* Other */
+select, button, input {
+    margin-bottom: 0;
 }
