--- a/index.css
+++ b/index.css
@@ -105,14 +105,46 @@ button.info:hover {
     border-color: var(--accent-info-border);
 }
 
+/* Editing inline */
+
 button.small-button {
+    position: absolute;
+    transform: translateX(-100%);
+    top: 1.5px;
+    left: -3px;
     padding: 3px;
-    margin-left: 0.75rem;
 }
 
 button.small-button>svg {
     width: 1rem;
     height: 1rem;
+}
+
+ul {
+    padding-inline-start: 2rem;
+}
+
+.editing li {
+    position: relative;
+}
+
+.inline-edit {
+    margin-bottom: 3px;
+}
+
+.inline-edit>input {
+    padding-inline: 3px;
+    padding-block: 1px;
+}
+
+.inline-edit>select {
+    padding-block: 1px;
+    padding-left: 3px;
+    padding-right: 3ch;
+}
+
+.inline-edit>input[type="number"] {
+    width: 6ch;
 }
 
 
@@ -144,26 +176,6 @@ label {
 input[type="checkbox"] {
     cursor: pointer;
     margin: 3px;
-}
-
-
-.inline-edit {
-    margin-bottom: 3px;
-}
-
-.inline-edit>input {
-    padding-inline: 3px;
-    padding-block: 1px;
-}
-
-.inline-edit>select {
-    padding-block: 1px;
-    padding-left: 3px;
-    padding-right: 3ch;
-}
-
-.inline-edit>input[type="number"] {
-    width: 6ch;
 }
 
 input::-webkit-outer-spin-button,
