--- a/index.css
+++ b/index.css
@@ -1,215 +1,244 @@
 /* Config */
 
-[x-cloak] { display: none !important; }
-
-:root{
-    --text: #f7eeee;
-    --text-light: #fff8e4;
-    --text-less: #c3c0bb;
-    --bg: #1f1f1f;
-    --accent-bg: #2f2f2f;
-    --preformatted: #d2cfc7;
-    --code: #40d181;
-
-    --accent-text: #fffff9;
-
-    --accent: #197e4f;
-    --accent-hover: #169071;
-
-    --accent-danger: #d72f2f;
-    --accent-danger-light: #ff3939;
-    --accent-danger-border: #a92828;
-
-    --accent-info: #2f7ed7;
-    --accent-info-light: #5da4f6;
-    --accent-info-border: #1f6ec7;
-
-    --accent-yellow: #d7b92f;
-    --accent-yellow-light: #f6d95d;
-    --accent-yellow-border: #c7a81f;
+[x-cloak] {
+	display: none !important;
 }
 
+:root {
+	--text: #f7eeee;
+	--text-light: #fff8e4;
+	--text-less: #c3c0bb;
+	--bg: #1f1f1f;
+	--accent-bg: #2f2f2f;
+	--preformatted: #d2cfc7;
+	--code: #40d181;
+
+	--accent-text: #fffff9;
+
+	--accent: #197e4f;
+	--accent-hover: #169071;
+
+	--accent-danger: #d72f2f;
+	--accent-danger-light: #ff3939;
+	--accent-danger-border: #a92828;
+
+	--accent-info: #2f7ed7;
+	--accent-info-light: #5da4f6;
+	--accent-info-border: #1f6ec7;
+
+	--accent-yellow: #d7b92f;
+	--accent-yellow-light: #f6d95d;
+	--accent-yellow-border: #c7a81f;
+}
 
 /* Spacing and Layout */
 
 .flex-space {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 @media (max-width: 768px) {
-    .column-when-small {
-        flex-direction: column;
-    }
+	.column-when-small {
+		flex-direction: column;
+	}
 }
 
 .flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .gap-half {
-    gap: 0.5rem;
+	gap: 0.5rem;
 }
 
 .gap-1 {
-    gap: 1rem;
+	gap: 1rem;
 }
 
 .gap-2 {
-    gap: 2rem;
+	gap: 2rem;
 }
 
 .bottom-gap {
-    margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 .h-100 {
-    height: 100%;
+	height: 100%;
 }
-
 
 /* Text */
 
 div.strong {
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    height: 100%;
+	font-weight: bold;
+	display: flex;
+	align-items: center;
+	height: 100%;
 }
 
 /* Buttons */
 
-button>svg {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+button > svg {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
 }
 
 button.danger {
-    background-color: var(--accent-danger);
-    border-color: var(--accent-danger-border);
+	background-color: var(--accent-danger);
+	border-color: var(--accent-danger-border);
 }
 
 button.danger:hover {
-    background-color: var(--accent-danger-light);
-    border-color: var(--accent-danger-border);
+	background-color: var(--accent-danger-light);
+	border-color: var(--accent-danger-border);
 }
 
 button.info {
-    background-color: var(--accent-info);
-    border-color: var(--accent-info-border);
+	background-color: var(--accent-info);
+	border-color: var(--accent-info-border);
 }
 
 button.info:hover {
-    background-color: var(--accent-info-light);
-    border-color: var(--accent-info-border);
+	background-color: var(--accent-info-light);
+	border-color: var(--accent-info-border);
 }
 
 button.yellow {
-    background-color: var(--accent-yellow);
-    border-color: var(--accent-yellow-border);
+	background-color: var(--accent-yellow);
+	border-color: var(--accent-yellow-border);
 }
 
 button.yellow:hover {
-    background-color: var(--accent-yellow-light);
-    border-color: var(--accent-yellow-border);
+	background-color: var(--accent-yellow-light);
+	border-color: var(--accent-yellow-border);
 }
 
 /* Editing inline */
 
 button.small-button {
-    position: absolute;
-    transform: translateX(-100%);
-    top: 1.5px;
-    left: -3px;
-    padding: 3px;
+	position: absolute;
+	transform: translateX(-100%);
+	top: 1.5px;
+	left: -3px;
+	padding: 3px;
 }
 
-button.small-button>svg {
-    width: 1rem;
-    height: 1rem;
+button.small-button > svg {
+	width: 1rem;
+	height: 1rem;
 }
 
 ul {
-    padding-inline-start: 2rem;
+	padding-inline-start: 2rem;
 }
 
 .editing li {
-    position: relative;
+	position: relative;
 }
 
 .inline-edit {
-    margin-bottom: 3px;
+	margin-bottom: 3px;
 }
 
-.inline-edit>input {
-    padding-inline: 3px;
-    padding-block: 1px;
+.inline-edit > input {
+	padding-inline: 3px;
+	padding-block: 1px;
 }
 
-.inline-edit>select {
-    padding-block: 1px;
-    padding-left: 3px;
-    padding-right: 3ch;
+.inline-edit > select {
+	padding-block: 1px;
+	padding-left: 3px;
+	padding-right: 3ch;
 }
 
-.inline-edit>input[type="number"] {
-    width: 6ch;
+.inline-edit > input[type="number"] {
+	width: 6ch;
 }
-
 
 /* Criteria */
 
 code.requirement {
-    color: var(--accent-info-light)
+	color: var(--accent-info-light);
 }
 
 code.bonus {
-    color: var(--accent)
+	color: var(--accent);
 }
 
 code.discount {
-    color: var(--accent-danger)
+	color: var(--accent-danger);
 }
 
 /* Other */
-select, button, input {
-    margin-bottom: 0;
+select,
+button,
+input {
+	margin-bottom: 0;
 }
 
 /* Inputs */
 
 label {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 input[type="checkbox"] {
-    cursor: pointer;
-    margin: 3px;
+	cursor: pointer;
+	margin: 3px;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
 }
 
-input[type=number] {
-    -moz-appearance: textfield;
+input[type="number"] {
+	-moz-appearance: textfield;
 }
 
-.new-edit > input, .new-edit > select {
-    color: var(--text-less);
-    border-color: rgba(255, 240, 250, 0.2);
+.new-edit > input,
+.new-edit > select {
+	color: var(--text-less);
+	border-color: rgba(255, 240, 250, 0.2);
 }
 
 /* Toasts */
 
 .toast-warning {
-    background: linear-gradient(90deg, var(--accent-danger) 0%, var(--accent-danger-light) 100%);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	background: linear-gradient(
+		90deg,
+		var(--accent-danger) 0%,
+		var(--accent-danger-light) 100%
+	);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Modal */
+
+.modal {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Bring the modal to the top layer */
+}
+
+.modal-content {
+	position: relative;
+	background-color: var(--accent-bg);
+	border-radius: 10px;
+	padding: 20px;
+	z-index: 10000;
 }
